fix skin1 z-index

--- a/src/css/skin.css
+++ b/src/css/skin.css
@@ -9,6 +9,7 @@ Apply skin (or "theming" layer) to components.
     border-radius: 0 0 calc(var(--border-radius-l) * 1.5);
     box-shadow: inset 0 0 0.25rem 0.125rem oklch(from var(--color-brand) l c h / 55%);
     corner-shape: superellipse(0);
+    isolation: isolate;
     margin-block: var(--gutter-l);
     padding: var(--gutter-l);
     position: relative;
@@ -26,6 +27,7 @@ Apply skin (or "theming" layer) to components.
         mask-position: bottom 1rem right 1rem, bottom 0.25rem right 0.25rem;
         mask-repeat: no-repeat;
         position: absolute;
+        z-index: -1;
     }
 
     /* Highlight skin container when it receives :focus or :hover.  */
